💄(front) fix close icon display when filter text spans 2 lines
The close icon on filters was getting shrinked as a flex item when
the filter name was spanning two lines (and therefore larger as
well).

Using `flex-shrink: 0` lets us avoid this unwanted behavior. Also
took this chance to add a small margin-left for the badge & close icon
so text does not flow too close to them.

--- a/src/richie-front/js/components/SearchFilter/_SearchFilter.scss
+++ b/src/richie-front/js/components/SearchFilter/_SearchFilter.scss
@@ -48,5 +48,16 @@ $richie-search-filters-active-divider-border: 1px solid $white !default;
 
     color: $white;
     background: $firebrick6;
+    margin-left: 0.375rem;
+  }
+
+  &__count,
+  .icon-close {
+    margin-left: 0.375rem;
+  }
+
+  .icon-close {
+    // Ensure the icon is not shrinked down when the filter name spans 2 lines
+    flex-shrink: 0;
   }
 }
